--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,8 @@ main{
     color: black;
     font-weight: bold;
     padding: 5px 10px 5px 10px;
+    outline: none;
+    border: none;
 }
 .btn p{
 color: #b2b2b2;
@@ -83,7 +85,7 @@ font-weight: bold;
         font-size: 1rem;
         margin-bottom: 0;
     }
-    .html{
+    .htmlgit {
         margin-left: 1rem;
         margin-bottom: 0;
     }
@@ -98,7 +100,8 @@ font-weight: bold;
         width: 100%;
         font-size: 0.90rem;
         margin-bottom: 0;
-        line-height: 1.5rem;
+        line-height: 1.2rem;
+        
     }
     .my-pix{
         margin-bottom: 1.5rem;
